added DailyStruggleButton as submodule for debouncing switches

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "SPI_Controller_And_Peripheral"]
 	path = Firmware/SPI_Controller_And_Peripheral
 	url = https://github.com/ForrestErickson/SPI_Controller_And_Peripheral.git
+[submodule "lib/reference/DailyStruggleButton"]
+	path = lib/reference/DailyStruggleButton
+	url = https://github.com/cygig/DailyStruggleButton.git
